Added about page

--- a/src/WinTrek.UI/MainWindow.xaml
+++ b/src/WinTrek.UI/MainWindow.xaml
@@ -57,6 +57,9 @@
                             <Separator/>
                             <MenuItem Header="E_xit" Click="ExitMenuItem_Click"/>
                         </MenuItem>
+                        <MenuItem Header="_HELP" FontFamily="Arial Black" FontSize="11" Foreground="Black">
+                            <MenuItem Header="_About" Click="AboutMenuItem_Click"/>
+                        </MenuItem>
                     </Menu>
                 </StackPanel>
 
